// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon should render with image 1`] = `
<div
  className="user-icon "
  onClick={[Function]}
>
  <img
    alt="User icon"
    src="http://rostiktest.pw:3300/static/icons/users/http://..."
  />
</div>
`;

exports[`UserIcon should render without image 1`] = `
<div
  className="user-icon "
  onClick={[Function]}
>
  <span
    style={
      Object {
        "background": "orange",
        "color": "black",
      }
    }
  >
    P
    R
  </span>
</div>
`;
